--- a/docs/array/1.two-sum.md
+++ b/docs/array/1.two-sum.md
@@ -5,9 +5,106 @@ date: 2020/07/10
 description: 页面的描述
 tags:
   - 数组
+  - 哈希表
 ---
+
+## 题目
+
+给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target  的那 两个 整数，并返回它们的数组下标。你可以假设每种输入只会对应一个答案。但是，数组中同一个元素在答案里不能重复出现。
+你可以按任意顺序返回答案。
+
+**例子**
+
+::: tip
+输入：nums = [2,7,11,15], target = 9
+
+输出：[0,1]
+
+解释：因为 nums[0] + nums[1] == 9 ，返回 [0, 1] 。
+:::
 
 
 ## 题目链接
 
-https://leetcode.cn/problems/two-sum/
+[https://leetcode.cn/problems/two-sum/](https://leetcode.cn/problems/two-sum/)
+
+## 题目大意
+
+在数组中找到两个树之和等于给定值的数字，结果返回这两个数字的下标
+
+## 解题思路
+
+这道题如果通过暴力遍历的话，也是很容易解决，但是时间复杂度`O(n2)`
+
+由于**哈希表**查找的时间复杂度为`O(1)`，所以可以利用**哈希表**`Map`来降低时间复杂度
+
+先遍历数组`nums`，把数组用**哈希表**`Map`存储起来
+
+然后遍历数组`nums`，判断`target`减去当前元素的差是否在**哈希表**`Map`找到，如果找到就返回，反之继续遍历。
+
+## 代码
+
+```javascript
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number[]}
+ */
+var twoSum = function (nums, target) {
+  const n = nums.length;
+  const result = [];
+  // 数组转哈希表
+  const num_map = new Map();
+  for (let i = 0; i < n; i++) {
+    num_map.set(nums[i], i);
+  }
+  for (let i = 0; i < n; i++) {
+    const temp = target - nums[i];
+    if (num_map.has(temp)) {
+      const j = num_map.get(temp);
+      // 过滤自己
+      if (i !== j) {
+        result.push(i);
+        result.push(j);
+        break;
+      }
+    }
+  }
+  return result;
+};
+```
+
+## 优化哈希表
+
+上面的代码实现是先把数组转换哈希表，然后通过遍历匹配元素，这样做空间复杂度最好和最坏都是 `O(n)`。
+
+虽然最坏时间复杂度优化不了，但是可以优化最坏时间复杂。比如最前面就满足条件的时候，就没有必要把后面的元素的转换成哈希表了。
+
+优化思路：
+
+- 定义一个空的**哈希表**`Map`
+- 遍历数组，判断`target`减去当前元素的差是否在**哈希表**`Map`找到，如果找到就返回，反之把当前元素存储到`Map`中，继续遍历。
+
+```javascript
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number[]}
+ */
+var twoSum = function (nums, target) {
+  const n = nums.length;
+  const result = [];
+  const num_map = new Map();
+  for (let i = 0; i < n; i++) {
+    const num = nums[i];
+    const temp = target - num;
+    if (num_map.has(temp)) {
+      result.push(num_map.get(temp));
+      result.push(i);
+      break;
+    }
+    num_map.set(num, i);
+  }
+  return result;
+};
+```
