--- a/docs/array/1.two-sum.md
+++ b/docs/array/1.two-sum.md
@@ -1,8 +1,11 @@
 ---
+icon: edit
 title: 两数之和(Two Sum)
-date: 2020/07/10
+date: 2020-07-10
 description: 页面的描述
-tags:
+category:
+  - 数组
+tag:
   - 数组
   - 哈希表
 ---
