--- a/docs/array/27.remove-element.md
+++ b/docs/array/27.remove-element.md
@@ -1,7 +1,9 @@
 ---
 title: 移除元素(remove-element)
-date: 2020/07/14:38:52
-tags:
+date: 2020-07-14:38:52
+category:
+  - 数组
+tag:
   - 数组
   - 双指针
 ---
