标题名称加上索引

--- a/docs/array/26.remove-duplicates-from-sorted-array.md
+++ b/docs/array/26.remove-duplicates-from-sorted-array.md
@@ -1,5 +1,5 @@
 ---
-title: 删除有序数组中的重复项(remove-duplicates-from-sorted-array)
+title: 26.删除有序数组中的重复项(remove-duplicates-from-sorted-array)
 date: 2020-07-10 10:48:00
 category:
   - 数组
