--- a/docs/array/119.pascals-triangle-ii.md
+++ b/docs/array/119.pascals-triangle-ii.md
@@ -1,5 +1,5 @@
 ---
-title: 119.杨辉三角 II(pascals-triangle-ii/)
+title: 119.杨辉三角 II(pascals-triangle-ii)
 date: 2020-08-23 15:21:00
 category:
   - 数组
